apps/users/api/k8s/base/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: users-api
  #  namespace: users
  labels:
    app: users-api
    version: v1
spec:
  replicas: 1

  template:
    metadata:
      name: users-api
      labels:
        app: users-api
        version: v1
      annotations:
        "consul.hashicorp.com/connect-inject": "true"
        "consul.hashicorp.com/connect-service": "users-api"
        "consul.hashicorp.com/connect-service-protocol": "http"
        "consul.hashicorp.com/service-meta-version": "v.1.1"
        "prometheus.io/scrape": "true"
        "prometheus.io/port": "9102"
    spec:
      serviceAccountName: users-api
      containers:
        - name: users-api
          #          image: europe-west1-docker.pkg.dev/maya-mussia/nx-go-playground/users-api:latest
          image: yurikrupnik/users-api:717fe19
          imagePullPolicy: IfNotPresent
          #          command: [ "node", "main.js" ]
          #            - node
          #            - main.js
      restartPolicy: Always
  selector:
    matchLabels:
      app: users-api
      version: v1
