apps/users/api/k8s/base/service.yml
apiVersion: v1
kind: Service
metadata:
  name: users-api-service
  labels:
    run: users-api-service
spec:
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    app: users-api
